# redline

./: .gitignore  README.md  package.json  spec.md
backend/: .gitignore  CLAUDE.md  main.py  pyproject.toml  start.sh
backend/api/: auto_retrain.py  models.py  server.py
backend/data/: .generation_progress.jsonl  field_vocabulary.py  generation_script.py  sample_handbook.txt  test.jsonl  train.jsonl  val.jsonl  validate_data.py
backend/engine/: __init__.py  comparator.py  normalize.py  pdf_parser.py  report.py
backend/engine/legislation/: ca_final_paycheck.json  ca_meal_breaks.json  ca_overtime.json  ca_pfl.json  ca_warn.json  federal_final_paycheck.json  federal_fmla.json  federal_meal_breaks.json  federal_overtime.json  federal_warn.json
backend/eval/: __init__.py  baseline_eval.py  baseline_results.json  baseline_results_mistral-7b.json  finetuned_eval.py  scorers.py
backend/jobs/: eval.yaml  generate_data.yaml  retrain.yaml  run_job.py  validate_data.yaml  webhook_config.yaml
backend/schema/: decision_logic.json  legislation.json  prompt_template.txt
backend/self_improve/: __init__.py  callbacks.py  compare_runs.py  config.py  generate_report.py  generate_targeted_data.py  improvement_report.md  inspect_metrics.py  loop_state.json  orchestrate_loop.py
backend/serving/: config.yaml  serve.py
backend/training/: config.yaml  finetune.py
backend/wandb/: latest-run
backend/wandb/run-20260228_142642-e3zfi9fg/: run-e3zfi9fg.wandb
backend/wandb/run-20260228_142642-e3zfi9fg/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
backend/wandb/run-20260228_142642-e3zfi9fg/files/media/table/: baseline_results_1_4e662e36fc94c357bb06.table.json
frontend/: README.md  index.html  package-lock.json  package.json  (+1 more)
(+59 files in other folders)
